--- a/filesQueue/docker-compose.yml
+++ b/filesQueue/docker-compose.yml
@@ -3,6 +3,10 @@ services:
   rabbitmq:
     image: rabbitmq:3-management-alpine
     container_name: 'rabbitmq'
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+    hostname: rabbitmq
     ports:
         - 5672:5672
         - 15672:15672
@@ -10,8 +14,9 @@ services:
         - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
         - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
     networks:
-        - rabbitmq_go_net
+        - app-network
+  
 
 networks:
-  rabbitmq_go_net:
+  app-network:
     driver: bridge
